# sort_lib

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: github.yml
cmake/: Test.cmake
example/: CMakeLists.txt  main.cpp
include/: merge-sort.hpp
src/: merge-sort.cpp
tests/: CMakeLists.txt  merge-sort-test.cpp
